--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -17,6 +17,7 @@
                 <Authorized>
                     <div class="top-row px-4 d-print-none" style="background-color: rgb(0, 0, 17);">
                         <a class="nav-link active text-white" href="user">
+                            <span class="oi oi-person"></span>
                             <strong>@context.User.FindFirstValue(ClaimTypes.GivenName)</strong>
                         </a>
                         <a href="about" class="d-print-none text-white">
