--- a/Pages/Facturacion/FacturaContado.razor
+++ b/Pages/Facturacion/FacturaContado.razor
@@ -75,7 +75,7 @@
                 </datalist>
                 
                 <button class="btn btn-outline-primary d-print-none" 
-                    @onclick="PrintPageAsync">
+                    @onclick="async ()=>{await PrintPageAsync();}">
                     <span class="oi oi-print"></span>
                 </button>
                 
@@ -118,6 +118,7 @@
                     <th>ITBIS</th>
                     <th>Descuento</th>
                     <th>Total</th>
+                    <th class="d-print-none">...</th>
                 </tr>
             </thead>
             <tbody>
@@ -127,7 +128,7 @@
                         <td class="col w-25 text-center">
                             <InputNumber 
                                 class="form-control" 
-                                @bind-Value="@detalle.Cantidad" />
+                                @bind-Value="@detalle.Cantidad" readonly/>
                         </td>
                         <td class="col w-25">
                             @detalle.Descripcion
@@ -148,6 +149,14 @@
 
                         <td class="col text-center">
                             $@detalle.SubTotal.ToString("N2")
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-outline-danger d-print-none"
+                                @onclick="()=>EliminarDetalle(detalle.ProductoId)">
+                                <span 
+                                    class="oi oi-trash">
+                                </span>
+                            </button>
                         </td>
                     </tr>
                 }
@@ -458,7 +467,7 @@ else
     }
     protected override async Task OnInitializedAsync()
     {
-        await Consultar();;
+        await Consultar();
         await Consultar2();
         await CargarContacto();
         await CargarProducto();
@@ -555,6 +564,17 @@ else
         var c = Contactos.FirstOrDefault(p => p.Nombre+" "+p.Apellidos == Contacto)!;
         if (c != null) facturaRequest.ClienteId = c.Id;
     }
+    void EliminarDetalle(int Id)
+    {
+        var detalle = facturaRequest.Detalles
+        .FirstOrDefault(d => d.ProductoId == Id);
+        // Actualizar el stock del producto en la base de datos
+        productoServices.StockDevuelto(detalle.ProductoId, detalle.Cantidad);
+        if (detalle != null)
+        {
+            facturaRequest.Detalles.Remove(detalle);
+        }
+    }
     async Task AgregarAlDetalle()
     {
         if (detalleFacturaRequest.Descuento > 30)
@@ -604,6 +624,9 @@ else
                     return;
                 }
             }
+
+            // Actualizar el stock del producto en la base de datos
+            await productoServices.ActualizarStock(IdProducto, Cantidad);
 
             Message = null;
         }
